--- a/teacher-info.html
+++ b/teacher-info.html
@@ -144,25 +144,25 @@
     </header>
 
     <section class="description">
-        <p>Une description n'est qu'un maquillage. Rencontrons-nous pour que tu fasses ta propre description de moi.</p>
-        <p>Oh, attends, apparemment, je dois écrire quelque chose 🙄</p>
-        <p>Ok alors j'ai 30 ans, je parle français, arabe, anglais et un peu espagnol et allemand.</p>
-        <p>Je suis diplômée en littérature anglaise et en études anglo-saxonnes.</p>
+        <p>A description is just makeup. Let's meet so you can make your own description of me.</p>
+        <p>Oh, wait, apparently I need to write something 🙄</p>
+        <p>Ok, so I'm 32 years old, I speak French, Arabic, English, German, and a little Spanish.</p>
+        <p>I hold a degree in English literature and Anglo-Saxon studies.</p>
         <ul>
-            <li>Passionnée par l'écriture, notamment de fiction.</li>
-            <li>J'aime jouer au basket et voyager.</li>
+            <li>Passionate about writing, especially fiction.</li>
+            <li>I love playing basketball and traveling.</li>
         </ul>
-        <p>Je ne sais pas ce qui t'a poussé à choisir le français (tu dois absolument m'en parler) mais comme Duffy l'a dit dans sa chanson Mercy, je ne sais pas ce que tu fais, mais tu le fais bien.</p>
-        <p>J'aime aussi lire, ou seulement acheter des livres et les stocker sans les lire, j'aime juste la sensation de les avoir à mes côtés.</p>
-        <p>Bonne chance !</p>
+        <p>I don't know what made you choose French (you absolutely must tell me), but as Duffy said in her song Mercy, I don't know what you do, but you do it well.</p>
+        <p>I also love reading, or just buying books and stocking them without reading them. I just enjoy the feeling of having them by my side.</p>
+        <p>Good luck!</p>
 
-        <h3 class="questions">Questions fréquemment posées</h3>
-        <p class="questions">Quelle est la manière la plus simple d’apprendre le français à Vienne ?</p>
-        <p>La meilleure façon de procéder dépend du niveau de l'élève. S'il s'agit d'un débutant, il est préférable de combiner l'apprentissage et la prononciation dans les leçons. Jamais séparément.</p>
-        <p>La prononciation est une clé dans l'apprentissage du français, être capable de bien prononcer dès le début donne plus de confiance à l'élève.</p>
+        <h3 class="questions">Frequently Asked Questions</h3>
+        <p class="questions">What is the easiest way to learn French in Vienna?</p>
+        <p>The best approach depends on the student's level. If they are a beginner, it's better to combine learning and pronunciation in the lessons, never separately.</p>
+        <p>Pronunciation is key in learning French. Being able to pronounce correctly from the beginning gives the student more confidence.</p>
 
-        <p class="questions">Le français est-il facile à apprendre ?</p>
-        <p>Pourquoi ne le serait-il pas !</p>
+        <p class="questions">Is French easy to learn?</p>
+        <p>Why wouldn't it be!</p>
     </section>
 
     <!-- Footer -->
