--- a/teacher-info.html
+++ b/teacher-info.html
@@ -1,186 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher Info - French Lessons with Meriem</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f5ff; /* Light yellow */
-            color: #4b0082; /* Purple */
-        }
+<section class="description">
+    <p>A description is just makeup. Let's meet so you can make your own description of me.</p>
+    <p>Oh, wait, apparently I need to write something 🙄</p>
+    <p>Ok, so I'm 32 years old, I speak French, Arabic, English, German, and a little Spanish.</p>
+    <p>I hold a degree in English literature and Anglo-Saxon studies.</p>
+    <ul>
+        <li>Passionate about writing, especially fiction.</li>
+        <li>I love playing basketball and traveling.</li>
+    </ul>
+    <p>I don't know what made you choose French (you absolutely must tell me), but as Duffy said in her song Mercy, I don't know what you're doing, but you're doing it well.</p>
+    <p>I also love reading, or just buying books and stocking them without reading them. I just enjoy the feeling of having them by my side.</p>
+    <p>Good luck!</p>
 
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            text-align: center;
-            background-color: #4b0082; /* Purple */
-        }
+    <h3 class="questions">Frequently Asked Questions</h3>
+    <p class="questions">What is the easiest way to learn French in Vienna?</p>
+    <p>The best approach depends on the student's level. If they are a beginner, it's better to combine learning and pronunciation in the lessons, never separately.</p>
+    <p>Pronunciation is key in learning French. Being able to pronounce correctly from the beginning gives the student more confidence.</p>
 
-        nav ul li {
-            display: inline;
-            margin-right: 15px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 10px;
-        }
-
-        nav ul li a:hover {
-            background-color: #ffd700; /* Gold */
-            color: white;
-        }
-
-        header {
-            background-color: #ffd700; /* Golden yellow */
-            color: #4b0082;
-            text-align: center;
-            padding: 20px;
-        }
-
-        #intro {
-            background-color: #5A1A8A; /* Dark Purple */
-            color: white;
-            padding: 40px;
-            text-align: center;
-        }
-
-        #tariffs {
-            text-align: center;
-            margin: 20px;
-            padding: 20px;
-            border: 2px solid #ffd700;
-            border-radius: 10px;
-            background-color: #fff8dc; /* Light cream yellow */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-
-        #tariffs h3 {
-            color: #4b0082; /* Purple */
-            font-size: 2em;
-            margin-bottom: 10px;
-        }
-
-        #tariffs p {
-            font-size: 1.2em;
-        }
-
-        footer {
-            text-align: center;
-            background-color: #ffd700; /* Golden yellow */
-            color: #4b0082;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .language-switcher {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .language-switcher button {
-            padding: 10px 15px;
-            margin: 5px;
-            border: none;
-            border-radius: 5px;
-            background-color: #4b0082; /* Purple */
-            color: white;
-            cursor: pointer;
-        }
-
-        .language-switcher button:hover {
-            background-color: #ffd700; /* Gold */
-            color: #4b0082;
-        }
-
-        img {
-            display: block;
-            margin: 20px auto;
-            max-width: 80%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .description {
-            padding: 20px;
-            background-color: #fff8dc; /* Light cream yellow */
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .description p {
-            font-size: 1.2em;
-        }
-
-        .description .questions {
-            color: red;
-            font-weight: bold;
-        }
-    </style>
-</head>
-<body>
-    <!-- Navigation Menu -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="teacher-infos.html">Teacher Info</a></li>
-        </ul>
-    </nav>
-
-    <!-- Teacher Info Section -->
-    <header>
-        <h1>About Me</h1>
-    </header>
-
-    <section class="description">
-        <p>A description is just makeup. Let's meet so you can make your own description of me.</p>
-        <p>Oh, wait, apparently I need to write something 🙄</p>
-        <p>Ok, so I'm 32 years old, I speak French, Arabic, English, German, and a little Spanish.</p>
-        <p>I hold a degree in English literature and Anglo-Saxon studies.</p>
-        <ul>
-            <li>Passionate about writing, especially fiction.</li>
-            <li>I love playing basketball and traveling.</li>
-        </ul>
-        <p>I don't know what made you choose French (you absolutely must tell me), but as Duffy said in her song Mercy, I don't know what you do, but you do it well.</p>
-        <p>I also love reading, or just buying books and stocking them without reading them. I just enjoy the feeling of having them by my side.</p>
-        <p>Good luck!</p>
-
-        <h3 class="questions">Frequently Asked Questions</h3>
-        <p class="questions">What is the easiest way to learn French in Vienna?</p>
-        <p>The best approach depends on the student's level. If they are a beginner, it's better to combine learning and pronunciation in the lessons, never separately.</p>
-        <p>Pronunciation is key in learning French. Being able to pronounce correctly from the beginning gives the student more confidence.</p>
-
-        <p class="questions">Is French easy to learn?</p>
-        <p>Why wouldn't it be!</p>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>Contact me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-    </footer>
-
-    <!-- Language Switch Script -->
-    <script>
-        function changeLanguage(lang) {
-            if (lang === 'en') {
-                location.href = 'index-en.html';
-            } else if (lang === 'fr') {
-                location.href = 'index-fr.html';
-            } else if (lang === 'ar') {
-                location.href = 'index-ar.html';
-            }
-        }
-    </script>
-</body>
-</html>
+    <p class="questions">Is French easy to learn?</p>
+    <p>Why wouldn't it be!</p> <!-- Now correctly included -->
+</section>
