--- a/teacher-info.html
+++ b/teacher-info.html
@@ -1,21 +1,21 @@
 <section class="description">
-    <p>A description is just makeup. Let's meet so you can make your own description of me.</p>
-    <p>Oh, wait, apparently I need to write something 🙄</p>
-    <p>Ok, so I'm 32 years old, I speak French, Arabic, English, German, and a little Spanish.</p>
-    <p>I hold a degree in English literature and Anglo-Saxon studies.</p>
+    <p><strong>A description is just makeup. Let's meet so you can make your own description of me.</strong></p>
+    <p><strong>Oh, wait, apparently I need to write something 🙄</strong></p>
+    <p><strong>Ok, so I'm 32 years old, I speak French, Arabic, English, German, and a little Spanish.</strong></p>
+    <p><strong>I hold a degree in English literature and Anglo-Saxon studies.</strong></p>
     <ul>
-        <li>Passionate about writing, especially fiction.</li>
-        <li>I love playing basketball and traveling.</li>
+        <li><strong>Passionate about writing, especially fiction.</strong></li>
+        <li><strong>I love playing basketball and traveling.</strong></li>
     </ul>
-    <p>I don't know what made you choose French (you absolutely must tell me), but as Duffy said in her song Mercy, I don't know what you're doing, but you're doing it well.</p>
-    <p>I also love reading, or just buying books and stocking them without reading them. I just enjoy the feeling of having them by my side.</p>
-    <p>Good luck!</p>
+    <p><strong>I don't know what made you choose French (you absolutely must tell me), but as Duffy said in her song Mercy, I don't know what you're doing, but you're doing it well.</strong></p>
+    <p><strong>I also love reading, or just buying books and stocking them without reading them. I just enjoy the feeling of having them by my side.</strong></p>
+    <p><strong>Good luck!</strong></p>
 
-    <h3 class="questions">Frequently Asked Questions</h3>
-    <p class="questions">What is the easiest way to learn French in Vienna?</p>
-    <p>The best approach depends on the student's level. If they are a beginner, it's better to combine learning and pronunciation in the lessons, never separately.</p>
-    <p>Pronunciation is key in learning French. Being able to pronounce correctly from the beginning gives the student more confidence.</p>
+    <h3 class="questions"><strong>Frequently Asked Questions</strong></h3>
+    <p class="questions"><strong>What is the easiest way to learn French in Vienna?</strong></p>
+    <p><strong>The best approach depends on the student's level. If they are a beginner, it's better to combine learning and pronunciation in the lessons, never separately.</strong></p>
+    <p><strong>Pronunciation is key in learning French. Being able to pronounce correctly from the beginning gives the student more confidence.</strong></p>
 
-    <p class="questions">Is French easy to learn?</p>
-    <p>Why wouldn't it be!</p> <!-- Now correctly included -->
+    <p class="questions"><strong>Is French easy to learn?</strong></p>
+    <p><strong>Why wouldn't it be!</strong></p> <!-- Answer now in bold and visible -->
 </section>
