--- a/teacher-info.html
+++ b/teacher-info.html
@@ -1,4 +1,9 @@
 <section class="description">
+    #teacher-description p {
+    font-weight: bold;
+    color: red; /* This makes the question text red */
+}
+
     <p><strong>A description is just makeup. Let's meet so you can make your own description of me.</strong></p>
     <p><strong>Oh, wait, apparently I need to write something 🙄</strong></p>
     <p><strong>Ok, so I'm 32 years old, I speak French, Arabic, English, German, and a little Spanish.</strong></p>
