--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>French Lessons with Meriem</title>
     <style>
         body {
+            <!-- Navigation Menu -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="teacher-infos.html">Teacher Info</a></li>
+        </ul>
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
