--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
         body {
             <!-- Navigation Menu -->
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="teacher-infos.html">Teacher Info</a></li>
-        </ul>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="teacher-info.html">Teacher Info</a></li> <!-- Corrected link -->
+    </ul>
+</nav>
+
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
