--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="teacher-info.html">Teacher Info</a></li> <!-- Corrected link -->
+        <li><a href="teacher-info.html">Teacher Info</a></li>
     </ul>
 </nav>
 
