--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <title>French Lessons with Meriem</title>
     <style>
         body {
-            <!-- Navigation Menu -->
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f5ff; /* Light yellow */
+            color: #4b0082; /* Purple */
+        }
+        /* Your other styles */
+    </style>
+</head>
+<body>
+    <!-- Navigation Menu -->
     <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="pages/teacher-info.html">Teacher Info</a></li>
-    </ul>
-</nav>
-
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="teacher-info.html">Teacher Info</a></li> <!-- Corrected link -->
+        </ul>
+    </nav>
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
