--- a/index.html
+++ b/index.html
@@ -12,24 +12,6 @@
             background-color: #f9f5ff; /* Light yellow */
             color: #4b0082; /* Purple */
         }
-        /* Your other styles */
-    </style>
-</head>
-<body>
-    <!-- Navigation Menu -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="teacher-info.html">Teacher Info</a></li> <!-- Corrected link -->
-        </ul>
-    </nav>
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f5ff; /* Light yellow */
-            color: #4b0082; /* Purple */
-        }
 
         nav ul {
             list-style-type: none;
@@ -136,7 +118,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="teacher-infos.html">Teacher Info</a></li>
+            <li><a href="teacher-info.html">Teacher Info</a></li>
         </ul>
     </nav>
 
