--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Lessons with Meriem</title>
     <style>
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -13,12 +14,17 @@
             color: #4b0082; /* Purple */
         }
 
+        /* Navigation Menu */
+        nav {
+            background-color: #4b0082; /* Purple */
+            padding: 10px;
+        }
+
         nav ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
             text-align: center;
-            background-color: #4b0082; /* Purple */
         }
 
         nav ul li {
@@ -37,6 +43,7 @@
             color: white;
         }
 
+        /* Header */
         header {
             background-color: #ffd700; /* Golden yellow */
             color: #4b0082;
@@ -44,6 +51,7 @@
             padding: 20px;
         }
 
+        /* Introduction Section */
         #intro {
             background-color: #5A1A8A; /* Dark Purple */
             color: white;
@@ -51,6 +59,7 @@
             text-align: center;
         }
 
+        /* Tariffs Section */
         #tariffs {
             text-align: center;
             margin: 20px;
@@ -73,6 +82,7 @@
             font-size: 1.2em;
         }
 
+        /* Footer */
         footer {
             text-align: center;
             background-color: #ffd700; /* Golden yellow */
@@ -83,6 +93,7 @@
             width: 100%;
         }
 
+        /* Language Switcher */
         .language-switcher {
             text-align: center;
             margin: 20px 0;
@@ -103,12 +114,34 @@
             color: #4b0082;
         }
 
+        /* Image Styles */
         img {
             display: block;
             margin: 20px auto;
-            max-width: 80%;
+            max-width: 100%;
             height: auto;
             border-radius: 10px;
+        }
+
+        /* Responsive Styles */
+        @media screen and (max-width: 768px) {
+            nav ul li {
+                display: block;
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+
+            header h1 {
+                font-size: 1.5em;
+            }
+
+            #intro {
+                padding: 20px;
+            }
+
+            #tariffs {
+                font-size: 1.2em;
+            }
         }
     </style>
 </head>
@@ -118,7 +151,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="teacher-info.html">Teacher Info</a></li>
+            <li><a href="teacher-info.html">Teacher Info</a></li> <!-- Corrected link -->
         </ul>
     </nav>
 
