--- a/index.html
+++ b/index.html
@@ -160,4 +160,43 @@
 
     <!-- Main Header -->
     <header>
-        <h
+        <h1>Welcome to French Lessons with Meriem!</h1>
+        <p>Experienced French teacher with 10 years of expertise.</p>
+    </header>
+
+    <!-- Introduction Section -->
+    <section id="intro">
+        <h2>Learn French with a Skilled Teacher</h2>
+        <p>With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence.</p>
+    </section>
+
+    <!-- Tariffs Section -->
+    <section id="tariffs">
+        <h3>TARIFS</h3>
+        <p>€15 for 90 minutes</p>
+        <p>Special Packs:</p>
+        <ul>
+            <li>€150 for 12 lessons (standard pack)</li>
+            <li>€200 for 15 pronunciation lessons (pronunciation pack)</li>
+        </ul>
+    </section>
+
+    <!-- Language Switcher -->
+    <div class="language-switcher">
+        <button onclick="switchLanguage('index.html')">English</button>
+        <button onclick="switchLanguage('index-ar.html')">Arabic</button>
+        <button onclick="switchLanguage('index-de.html')">German</button>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>Contact me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    </footer>
+
+    <script>
+        function switchLanguage(file) {
+            window.location.href = file;
+        }
+    </script>
+</body>
+</html>
